<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etProjectName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/nombre_del_proyecto"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etProjectDesc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/descripci_n_del_proyecto"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/etProjectName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_margin="16dp"/>

    <Button
        android:id="@+id/btnSubmitProject"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/crear_proyecto"
        app:layout_constraintTop_toBottomOf="@id/etProjectDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>